header nav spacing fix

--- a/web/wp-content/themes/mozilla-labs/static/scss/app.scss
+++ b/web/wp-content/themes/mozilla-labs/static/scss/app.scss
@@ -197,7 +197,7 @@ body {
   }
 
   .button-sm {
-    @apply flex justify-center items-center pt-[6px] pb-[5px] px-[10px];
+    @apply flex justify-center h-fit items-center pt-[9px] pb-[8px] px-[10px];
   }
 
   .button-square {
